# execenv

./: .codecov.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
execenv/: __init__.py  config.py  dotenv.py  utils.py  verbose.py
scripts/: execenv.lua
tests/: conftest.py
tests/dotenv/: test_dotenv.py
tests/dotenv/output/: basic.json  multiline.json
tests/execenv/: config.env  file.env  test_execenv.py
tests/execenv-echo/: test_execenv_echo.py
tests/execenv/cwd/: README.md
