[tool.poetry]
name = "execenv"
version = "0.1.0"
description = "Run a certain command with environment variables set."
authors = ["MaxMixAlex <MaxMixAlex@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
rich-click = { version = "^1.8.3", optional = true }

[tool.poetry.group.dev.dependencies]
types-click = "^7.1.8"

[tool.poetry.extras]
rich = ["rich-click"]

[tool.poetry.scripts]
execenv = "execenv:execenv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
