[tool.poetry]
name = "execenv"
version = "0.1.1"
description = "Run command with a certain environment."
license = "MIT"
authors = ["MaxMixAlex <MaxMixAlex@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/zyf722/execenv"
keywords = ["cli", "commandline", "env", "environment", "environment variables"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Topic :: System",
    "Topic :: Terminals",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
rich-click = { version = "^1.8.3", optional = true }
auto-click-auto = "^0.1.5"

[tool.poetry.group.dev.dependencies]
types-click = "^7.1.8"
ruff = "^0.6.3"
isort = "^5.13.2"
mypy = "^1.11.2"
python-semantic-release = "^9.8.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-sugar = "^1.0.0"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"

[tool.poetry.extras]
rich = ["rich-click"]

[tool.poetry.scripts]
execenv = "execenv:execenv"
"execenv-completion" = "execenv:execenv_completion"
"execenv-echo" = "execenv:execenv_echo"

[tool.ruff.lint]
ignore = ["E501"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
branch = "main"
tag_format = "{version}"
commit_author = "github-actions[bot] <actions@github.com>"
commit_message = "chore(release): v{version}"

[tool.semantic_release.changelog]
keep_trailing_newline = true

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
